Added framework for engine

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,14 +1,26 @@
 cmake_minimum_required(VERSION 2.6)
 project(OLIVERA)
 
-add_library(olivera src/olivera/dummy.cpp)
+include_directories(
+src
+)
+
+add_library(olivera 
+src/olivera/Core.cpp
+src/olivera/Core.h
+src/olivera/Entity.cpp
+src/olivera/Entity.h
+src/olivera/Component.cpp
+src/olivera/Component.h)
 
 
 
 target_link_libraries(olivera SDL2 opengl32 glew32)
 
-add_executable(core
-  src/core/Core.cpp
+add_executable(TestScreen
+  src/TestScreen/main.cpp
+ 
+  
 )
 
-target_link_libraries(core olivera)
+target_link_libraries(TestScreen olivera)
