Post Processing is not mandatory, added textures, Bling-Phong Shader files and light class set-up

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,7 +89,8 @@ src/olivera/PostProcessing.cpp
 src/olivera/SoundSource.cpp
 src/olivera/SoundSource.h
 
-
+src/olivera/Light.h
+src/olivera/Light.cpp
 )
 
 
