--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -89,8 +89,8 @@ src/olivera/PostProcessing.cpp
 src/olivera/SoundSource.cpp
 src/olivera/SoundSource.h
 
-stc/olivera/Material.h
-src/olivera/Material.cpp
+src/olivera/Materials.h
+src/olivera/Materials.cpp
 
 src/olivera/Light.h
 src/olivera/Light.cpp
