Added muliple Camera's need to update comments, and add framebuffers in to current camera class

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -94,6 +94,9 @@ src/olivera/Materials.cpp
 
 src/olivera/Light.h
 src/olivera/Light.cpp
+
+src/olivera/CameraContext.h
+src/olivera/CameraContext.cpp
 )
 
 
