Changed VertexBuffer class to VertexArray and fixed filepath mistake

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,7 +5,7 @@ include_directories(
 src
 contrib
 )
-FILE(COPY resources DESTINATION "${CMAKE_BINARY_DIR}")
+
 if(MSVC)
   include_directories(
     contrib/msvc-2017-windows-x86/glew/include
@@ -42,35 +42,50 @@ endif()
 add_library(olivera 
 src/olivera/Core.cpp
 src/olivera/Core.h
+
 src/olivera/Entity.cpp
 src/olivera/Entity.h
+
 src/olivera/Component.cpp
 src/olivera/Component.h
+
 src/olivera/olivera.h
+
 src/olivera/ShaderProgram.cpp
 src/olivera/ShaderProgram.h
+
 src/olivera/MeshRenderer.cpp
 src/olivera/MeshRenderer.h
+
 src/olivera/Mesh.cpp
 src/olivera/Mesh.h
+
 src/olivera/Model.cpp
 src/olivera/Model.h
+
 src/olivera/Sound.cpp
 src/olivera/Sound.h
+
 src/olivera/Keyboard.cpp
 src/olivera/Keyboard.h
+
 src/olivera/Texture.h
 src/olivera/Texture.cpp
-src/olivera/VertexBuffer.h
-src/olivera/VertexBuffer.cpp
+
+src/olivera/VertexArray.h
+src/olivera/VertexArray.cpp
+
 src/olivera/stb_image.cpp
 
 src/olivera/CurrentCamera.h
 src/olivera/CurrentCamera.cpp
+
 src/olivera/Mouse.h
 src/olivera/Mouse.cpp
+
 src/olivera/Transform.h
 src/olivera/Transform.cpp
+
 src/olivera/Environment.h
 src/olivera/Environment.cpp
 
